Fix footer (because we added an extra space)

--- a/admin/static/less/styles.less
+++ b/admin/static/less/styles.less
@@ -334,7 +334,7 @@ TODO: retire this
         list-style-type: none;
         li {
             display: inline-block;
-            margin-right: 65px;
+            margin-right: 64px;
             a { color: #a3a3a3; }
         }
     }
